add: booking status management, refactor: improve dependency injection and stream operations